--- a/README
+++ b/README
@@ -2,3 +2,13 @@ Simple and easy reflection API wrapper for Java in fluent interface style.
 
 No annotations needed.
 
+TODO:
+-----
++ Exceptions
++ Inheritance
++ Constructors
+
+BUBBLING UNDER:
+---------------
++ Annotations?
++ Generics?
