Test for static fields on object instances.

--- a/README
+++ b/README
@@ -7,7 +7,12 @@ TODO:
 + Exceptions
 + Inheritance
 + Constructors
-+ Statics
+
+DONE:
+-----
++ Instances without inheritance
++ Statics on classes without inheritance
++ Statics on objects without inheritance
 
 BUBBLING UNDER:
 ---------------
