--- a/README
+++ b/README
@@ -6,6 +6,7 @@ TODO:
 -----
 + Exceptions
 + Constructors
++ Strings as args like objects and classes, to enable invocation without compile-time dependency
 
 DONE:
 -----
