--- a/README
+++ b/README
@@ -4,11 +4,14 @@ No annotations needed.
 
 TODO:
 -----
-+ Exceptions from incorrect usage
 + Strings as args like objects and classes, to enable invocation without compile-time dependency
 + Invoking varargs methods & constructors
 + Using class java.lang.Void explicitly as return type
 + Invoke with single null parameter
+
+HALFWAY DONE:
+-------------
++ Exceptions from incorrect usage
 
 DONE:
 -----
